--- a/builds/development/project6.html
+++ b/builds/development/project6.html
@@ -3,13 +3,11 @@
 <head>
 	<meta charset = "UTF-8">
 	<title>Angular testing</title>
-<script src="lib/angular/angular.min.js"></script>
-<script src="lib/angular/angular-route.min.js"></script>
-<script src="js/app6.js"></script>
-<script src="js/controller6.js"></script>
-<style>
-	
-</style>
+	<script src="lib/angular/angular.min.js"></script>
+	<script src="lib/angular/angular-route.min.js"></script>
+	<script src="js/app6.js"></script>
+	<script src="js/controller6.js"></script>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div class="main" ng-view></div>
