--- a/builds/development/project6.html
+++ b/builds/development/project6.html
@@ -5,6 +5,11 @@
 	<title>Angular testing</title>
 	<script src="lib/angular/angular.min.js"></script>
 	<script src="lib/angular/angular-route.min.js"></script>
+	<script src="lib/angular/angular-animate.min.js"></script>
+
+	<script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+    <script src="https://cdn.firebase.com/libs/angularfire/1.1.1/angularfire.min.js"></script>
+
 	<script src="js/app6.js"></script>
 	<script src="js/controller6.js"></script>
 	<link rel="stylesheet" href="css/style.css">
